--- a/ChachaT/ScrollViewSearchView.xib
+++ b/ChachaT/ScrollViewSearchView.xib
@@ -11,17 +11,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ScrollViewSearchView" customModule="Shuffles" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="577" height="74"/>
+            <rect key="frame" x="0.0" y="0.0" width="617" height="114"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wnR-At-8N3">
-                    <rect key="frame" x="0.0" y="0.0" width="577" height="74"/>
+                    <rect key="frame" x="0.0" y="0.0" width="537" height="114"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9NQ-uw-kwB">
-                            <rect key="frame" x="0.0" y="0.0" width="177" height="74"/>
+                            <rect key="frame" x="0.0" y="0.0" width="71" height="114"/>
                             <subviews>
                                 <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ShF-V1-DNL" customClass="ChachaChosenTagListView" customModule="Shuffles" customModuleProvider="target">
-                                    <rect key="frame" x="8" y="-40" width="0.0" height="154"/>
+                                    <rect key="frame" x="8" y="-20" width="0.0" height="154"/>
                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" id="Scz-8p-IDp"/>
@@ -34,7 +34,7 @@
                                     </variation>
                                 </view>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Qm8-QK-DG2">
-                                    <rect key="frame" x="31" y="17" width="132" height="40"/>
+                                    <rect key="frame" x="31" y="37" width="40" height="40"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jtV-9o-qhN">
                                             <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -47,41 +47,13 @@
                                                 <action selector="searchButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="Hrz-DF-Pqa"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mcn-RE-n9V">
-                                            <rect key="frame" x="46" y="0.0" width="40" height="40"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="40" id="aPp-vU-vyR"/>
-                                                <constraint firstAttribute="height" constant="40" id="g7r-va-uhs"/>
-                                            </constraints>
-                                            <state key="normal" image="Checkmark">
-                                                <color key="titleColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            </state>
-                                            <connections>
-                                                <action selector="goButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="SBt-i9-p54"/>
-                                            </connections>
-                                        </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SPh-de-YPj">
-                                            <rect key="frame" x="92" y="0.0" width="40" height="40"/>
-                                            <state key="normal" image="XIcon">
-                                                <color key="titleColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            </state>
-                                            <connections>
-                                                <action selector="exitButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="CcL-T8-xhE"/>
-                                            </connections>
-                                        </button>
                                     </subviews>
-                                    <constraints>
-                                        <constraint firstItem="SPh-de-YPj" firstAttribute="height" secondItem="mcn-RE-n9V" secondAttribute="height" id="Pog-7M-cVb"/>
-                                        <constraint firstItem="SPh-de-YPj" firstAttribute="width" secondItem="mcn-RE-n9V" secondAttribute="width" id="b1f-eG-bRg"/>
-                                        <constraint firstItem="jtV-9o-qhN" firstAttribute="height" secondItem="mcn-RE-n9V" secondAttribute="height" id="taZ-Qg-4kU"/>
-                                        <constraint firstItem="jtV-9o-qhN" firstAttribute="width" secondItem="mcn-RE-n9V" secondAttribute="width" id="yzs-Dc-dDe"/>
-                                    </constraints>
                                 </stackView>
                             </subviews>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="ShF-V1-DNL" secondAttribute="width" id="3WK-az-AiH"/>
                                 <constraint firstAttribute="width" secondItem="ShF-V1-DNL" secondAttribute="width" constant="80" id="8rZ-S9-KRj"/>
-                                <constraint firstAttribute="trailing" secondItem="Qm8-QK-DG2" secondAttribute="trailing" constant="14" id="Mah-o7-OO0"/>
+                                <constraint firstAttribute="trailing" secondItem="Qm8-QK-DG2" secondAttribute="trailing" id="Mah-o7-OO0"/>
                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="79" id="TpB-aL-EgC"/>
                                 <constraint firstItem="Qm8-QK-DG2" firstAttribute="leading" secondItem="ShF-V1-DNL" secondAttribute="trailing" constant="23" id="WSX-ob-yRB"/>
                                 <constraint firstItem="Qm8-QK-DG2" firstAttribute="centerY" secondItem="ShF-V1-DNL" secondAttribute="centerY" id="bBW-dX-iCD"/>
@@ -119,25 +91,64 @@
                         </mask>
                     </variation>
                 </scrollView>
+                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FHl-TR-B8M">
+                    <rect key="frame" x="537" y="37" width="80" height="40"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SPh-de-YPj">
+                            <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                            <state key="normal" image="XIcon">
+                                <color key="titleColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="exitButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="CcL-T8-xhE"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mcn-RE-n9V">
+                            <rect key="frame" x="40" y="0.0" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="40" id="aPp-vU-vyR"/>
+                                <constraint firstAttribute="height" constant="40" id="g7r-va-uhs"/>
+                            </constraints>
+                            <state key="normal" image="Checkmark">
+                                <color key="titleColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="goButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="SBt-i9-p54"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="SPh-de-YPj" firstAttribute="height" secondItem="mcn-RE-n9V" secondAttribute="height" id="729-N3-KeC"/>
+                        <constraint firstItem="SPh-de-YPj" firstAttribute="width" secondItem="mcn-RE-n9V" secondAttribute="width" id="z8A-mM-W78"/>
+                    </constraints>
+                </stackView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="FHl-TR-B8M" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="04O-F7-NF1"/>
+                <constraint firstItem="jtV-9o-qhN" firstAttribute="height" secondItem="mcn-RE-n9V" secondAttribute="height" id="0dc-BQ-Q8y"/>
+                <constraint firstItem="FHl-TR-B8M" firstAttribute="leading" secondItem="wnR-At-8N3" secondAttribute="trailing" id="5Jv-EW-hB7"/>
                 <constraint firstItem="wnR-At-8N3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="5Ol-L5-7Ga"/>
+                <constraint firstAttribute="trailing" secondItem="FHl-TR-B8M" secondAttribute="trailing" id="7sm-Ga-e2V"/>
                 <constraint firstItem="wnR-At-8N3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="MmT-gg-tlF"/>
-                <constraint firstAttribute="trailing" secondItem="wnR-At-8N3" secondAttribute="trailing" id="ozN-Cm-vMi"/>
+                <constraint firstItem="jtV-9o-qhN" firstAttribute="width" secondItem="mcn-RE-n9V" secondAttribute="width" id="r3l-iX-pIB"/>
                 <constraint firstAttribute="bottom" secondItem="wnR-At-8N3" secondAttribute="bottom" id="xPh-Ey-Yfe"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="theButtonStackView" destination="Qm8-QK-DG2" id="LqB-1l-VMf"/>
                 <outlet property="theExitButton" destination="SPh-de-YPj" id="kEf-un-BVG"/>
+                <outlet property="theFinishedButtonsStackView" destination="FHl-TR-B8M" id="DNz-UR-bmA"/>
                 <outlet property="theGoButton" destination="mcn-RE-n9V" id="EEo-1q-Qg5"/>
                 <outlet property="theGoButtonHeightConstraint" destination="g7r-va-uhs" id="4MT-xl-Jgd"/>
+                <outlet property="theLeadingSearchButtonConstraint" destination="WSX-ob-yRB" id="Y3W-sm-M8A"/>
                 <outlet property="theScrollView" destination="wnR-At-8N3" id="k8X-94-eOQ"/>
                 <outlet property="theSearchButton" destination="jtV-9o-qhN" id="NEC-yO-SGO"/>
                 <outlet property="theTagChosenHolderView" destination="9NQ-uw-kwB" id="66j-0I-a5N"/>
                 <outlet property="theTagChosenListView" destination="ShF-V1-DNL" id="h8Y-lp-hhl"/>
                 <outlet property="theTagListViewWidthConstraint" destination="Scz-8p-IDp" id="tKX-Hl-baU"/>
+                <outlet property="theTrailingFinishedStackViewConstraint" destination="7sm-Ga-e2V" id="how-bU-FOF"/>
+                <outlet property="theTrailingSearchButtonConstraint" destination="Mah-o7-OO0" id="UWI-nx-DfL"/>
             </connections>
             <point key="canvasLocation" x="796.5" y="351"/>
         </view>
