--- a/ChachaT/Filtering.storyboard
+++ b/ChachaT/Filtering.storyboard
@@ -21,13 +21,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cxi-sq-uxE">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="30" width="375" height="637"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bf0-S4-AUg">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="46"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="36"/>
                                         <subviews>
                                             <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x2C-mZ-onz" customClass="ChachaChoicesTagListView" customModule="Shuffles" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="46"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="36"/>
                                             </view>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -57,7 +57,7 @@
                             <constraint firstItem="FYC-lr-Sp7" firstAttribute="centerY" secondItem="SST-8Z-EKe" secondAttribute="centerY" id="W9p-k7-qWD"/>
                             <constraint firstItem="FYC-lr-Sp7" firstAttribute="centerX" secondItem="SST-8Z-EKe" secondAttribute="centerX" id="Z1y-H2-sLC"/>
                             <constraint firstItem="bf0-S4-AUg" firstAttribute="width" secondItem="SST-8Z-EKe" secondAttribute="width" id="bOQ-oL-4rG"/>
-                            <constraint firstItem="cxi-sq-uxE" firstAttribute="top" secondItem="HPb-BY-jXc" secondAttribute="bottom" id="jOA-CU-vhh"/>
+                            <constraint firstItem="cxi-sq-uxE" firstAttribute="top" secondItem="HPb-BY-jXc" secondAttribute="bottom" constant="10" id="jOA-CU-vhh"/>
                             <constraint firstItem="8zR-1V-GnX" firstAttribute="top" secondItem="cxi-sq-uxE" secondAttribute="bottom" id="zHY-f5-tqn"/>
                         </constraints>
                     </view>
@@ -66,6 +66,7 @@
                         <outlet property="tagChoicesView" destination="x2C-mZ-onz" id="U2V-kU-JsF"/>
                         <outlet property="tagChoicesViewTopConstraint" destination="jOA-CU-vhh" id="lOY-Xv-lhJ"/>
                         <outlet property="theTagScrollView" destination="cxi-sq-uxE" id="8GO-R9-63S"/>
+                        <outlet property="theTagScrollViewTopConstraint" destination="jOA-CU-vhh" id="bFR-X6-IHe"/>
                         <segue destination="Dth-C6-7C9" kind="presentation" identifier="SearchPageToTinderMainPageSegue" id="aQB-SX-kvS"/>
                     </connections>
                 </viewController>
