--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -85,17 +86,17 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="766"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="155-yz-ccQ" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="510"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="797"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ggM-LL-fqe" customClass="PhotoEditingMasterLayoutView" customModule="Shuffles" customModuleProvider="target">
-                                                <rect key="frame" x="8" y="8" width="584" height="297"/>
+                                                <rect key="frame" x="8" y="8" width="584" height="584"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="297" id="H9E-bc-TbU"/>
                                                     <constraint firstAttribute="width" priority="250" constant="584" id="Wg1-GU-a1H"/>
+                                                    <constraint firstAttribute="width" secondItem="ggM-LL-fqe" secondAttribute="height" multiplier="1:1" id="h3g-Xj-luY"/>
                                                 </constraints>
                                             </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="580" placeholderIntrinsicHeight="128" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="gwk-8T-bhR">
-                                                <rect key="frame" x="0.0" y="315" width="600" height="128"/>
+                                                <rect key="frame" x="0.0" y="602" width="600" height="128"/>
                                             </stackView>
                                         </subviews>
                                         <color key="backgroundColor" red="0.95686274510000002" green="0.96470588239999999" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
